releases/armi/v0.6.1/_sources/gallery/analysis/run_hexBlockToRZConversion.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/analysis/run_hexBlockToRZConversion.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_analysis_run_hexBlockToRZConversion.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_analysis_run_hexBlockToRZConversion.py:


Hex block to RZ geometry conversion
===================================
Often, parts of a reactor model must be transformed to a different geometry in order to
perform a certain type of physics calculation. For example, in some fast reactor lattice
physics calculations, detailed descriptions of control assemblies must be mapped to
equivalent 1-D cylindrical models.

This example shows how a control assembly defined in full hex-pin detail can be
automatically converted to an equivalent 1-D RZ case, including an outer ring of fuel to
drive the case.

This conversion includes rings for control material, gap, cladding (on both sides of each
ring of control material), coolant, duct, and fuel. The color of the plot is proportional
to the mass density.

Given this transformation, a 1-D lattice physics solver can be executed to compute
accurate cross sections.

By automating these kinds of geometry conversions, ARMI allows core designers to maintain
the design in real geometry while still performing appropriate approximations for
efficient analysis.

.. warning::
    This uses :py:mod:`armi.reactor.converters.blockConverters`, which
    currently only works on a constrained set of hex-based geometries. For your systems,
    consider these an example and starting point and build your own converters as
    appropriate.

.. GENERATED FROM PYTHON SOURCE LINES 43-65



.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /gallery/analysis/images/sphx_glr_run_hexBlockToRZConversion_001.png
         :alt: run hexBlockToRZConversion
         :srcset: /gallery/analysis/images/sphx_glr_run_hexBlockToRZConversion_001.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gallery/analysis/images/sphx_glr_run_hexBlockToRZConversion_002.png
         :alt: run hexBlockToRZConversion
         :srcset: /gallery/analysis/images/sphx_glr_run_hexBlockToRZConversion_002.png
         :class: sphx-glr-multi-img





.. code-block:: default


    from armi import configure
    from armi.reactor.converters import blockConverters
    from armi.reactor.flags import Flags
    from armi.reactor.tests import test_reactors

    # configure ARMI
    configure(permissive=True)

    _o, r = test_reactors.loadTestReactor()

    # fully heterogeneous
    bFuel = r.core.getBlocks(Flags.FUEL)[0]
    bControl = r.core.getBlocks(Flags.CONTROL)[0]
    converter = blockConverters.HexComponentsToCylConverter(sourceBlock=bControl, driverFuelBlock=bFuel, numExternalRings=1)
    converter.convert()
    converter.plotConvertedBlock()

    # partially heterogeneous
    converter = blockConverters.HexComponentsToCylConverter(sourceBlock=bFuel, ductHeterogeneous=True)
    converter.convert()
    converter.plotConvertedBlock()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.521 seconds)


.. _sphx_glr_download_gallery_analysis_run_hexBlockToRZConversion.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: run_hexBlockToRZConversion.py <run_hexBlockToRZConversion.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: run_hexBlockToRZConversion.ipynb <run_hexBlockToRZConversion.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
